--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,16 @@ h1 {
     text-align: center;
     font-size: 1.8rem;
     margin: 1.5rem;
-    height: 125px;
+    margin-bottom: 0;
+    height: 50px;
 }
+
+#winner {
+    text-align: center;
+    font-size: 1.8rem;
+    height: 100px;
+}
+
 
 #weapon-selector {
     display: flex;
